# exonet-api-python

./: .coveragerc  .editorconfig  .flake8  .gitignore  CHANGELOG.md  LICENSE.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yaml  code-checks.yaml  codeql.yaml  draft-release.yaml  labels.yaml  pr-labels.yaml  publish.yaml  requirements.txt  security.yml  tests.yaml
docs/: calls.md  error_handling.md  index.md  resources.md  responses.md  using.md
examples/: dns_zone_details.py  dns_zones.py  new_dns_zones.py  ticket_details.py  tickets.py
exonetapi/: Client.py  RequestBuilder.py  __init__.py  create_resource.py
exonetapi/auth/: Authenticator.py  __init__.py
exonetapi/exceptions/: ValidationException.py  __init__.py
exonetapi/result/: Parser.py  Resource.py  __init__.py
exonetapi/structures/: ApiResource.py  ApiResourceIdentifier.py  ApiResourceSet.py  Relation.py  Relationship.py  Resource.py  ResourceIdentifier.py  __init__.py
tests/: testCase.py  testClient.py  testRequestBuilder.py  test_client.py  test_create_resource.py  test_request_builder.py
tests/auth/: testAuthenticator.py  test_authenticator.py
tests/exceptions/: testValidationException.py  test_validation_exception.py
tests/result/: testParser.py  testResource.py  test_parser.py
tests/structures/: testApiResource.py  testApiResourceIdentifier.py  testApiResourceSet.py  testRelation.py  testResource.py  testResourceIdentifier.py  test_api_resource.py  test_api_resource_identifier.py  test_api_resource_set.py  test_relation.py
