[tool.poetry]
name = "exonetapi"
version = "4.0.0"
description = "Library to interact with the Exonet API."
authors = ["Exonet <development@exonet.nl>"]
maintainers = ["Exonet <development@exonet.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/exonet/exonet-api-python"
repository = "https://github.com/exonet/exonet-api-python"
documentation = "https://github.com/exonet/exonet-api-python"
keywords = ["async", "client", "exonet", "exonetapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  {include = "exonetapi"},
  {include = "exonetapi/**/*.py"},
]

[tool.poetry.dependencies]
inflection = "^0.5.1"
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = {version = "^24.3.0", allow-prereleases = true}
flake8 = "^5.0.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
