[project]
name = "exonetapi"
version = "5.1.0"
description = "Library to interact with the Exonet API."
authors = [{ name = "Exonet", email = "development@exonet.nl" }]
maintainers = [{ name = "Exonet", email = "development@exonet.nl" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/exonet/exonet-api-python"
repository = "https://github.com/exonet/exonet-api-python"
documentation = "https://github.com/exonet/exonet-api-python"
keywords = ["async", "client", "exonet", "exonetapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
  "inflection==0.5.1",
  "requests==2.32.4",
]

[tool.poetry]
packages = [
  {include = "exonetapi"},
  {include = "exonetapi/**/*.py"},
]

[tool.poetry.group.dev.dependencies]
black = {version = "^25.11.0", allow-prereleases = true}
flake8 = "^7.3.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
bandit = "^1.8.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
